--- a/src/components/ImageStyleSheet.css
+++ b/src/components/ImageStyleSheet.css
@@ -15,12 +15,14 @@
 
 
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 820px) {
     .img-view{
         width: 100%;
         height: 100%;
+        object-fit: cover;
     }
 
+    
     .container{
         all: initial;
     }
