--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -26,7 +26,8 @@
   text-decoration: none;
   font-family: sans-serif;
   font-size: 2rem;
-  width: 70%;
+  font-weight: bold;
+  width: 80%;
   display: flex;
   align-items: center;
 }
@@ -79,6 +80,8 @@
 }
 
 @media screen and (max-width: 960px) {
+  
+  
   .NavbarItems {
     position: relative;
   }
@@ -118,8 +121,9 @@
 
   .navbar-logo {
     position: absolute;
-    font-size: 2rem;
-    top: 0;
+    font-size: 1rem;
+    font-weight: bold;
+    top: 30%;
     left: 0;
     transform: translate(10%, 50%);
   }
